# image-analysis

./: .gitignore  CMakeLists.txt  Filters.cpp  Filters.h  ImageProcessor.cpp  ImageProcessor.h  MyProject  OpenCVApp  README.md  build_cli.sh  build_gui.sh  convolution.cpp  exec  histo.cpp  main.cpp  median.cpp  run.sh
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
QtProject/: .gitignore  CMakeCache.txt  CMakeLists.txt  QtProject  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui
img/: CMakeCache.txt
